--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <aside class="w-80 bg-slate-900 text-white flex flex-col shadow-2xl z-20 flex-shrink-0 relative">
         <div class="p-6 border-b border-slate-800 bg-slate-950 text-center">
             <h2 class="text-2xl font-extrabold flex items-center justify-center gap-2 app-title-gradient">
-                <i data-lucide="zap" class="text-yellow-400 fill-yellow-400"></i> Smart SPT
+                <img src="https://github.com/semestarayacorporation-oss/spt-pajak/blob/main/razamanmuda.png" alt="Logo Smart SPT" class="w-7 h-7 object-contain"> Smart SPT
             </h2>
             <p class="text-[10px] text-slate-400 mt-1 uppercase tracking-wider font-bold">INTERNAL LAPORAN KEUANGAN OTOMATIS</p>
         </div>
