--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart SPT Pajak - INTERNAL LAPORAN KEUANGAN OTOMATIS</title>
+    <title>Smart SPT Pajak - SPT Tahunan laporan keuangan  OTOMATIS</title>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -123,7 +123,7 @@
             <h2 class="text-2xl font-extrabold flex items-center justify-center gap-2 app-title-gradient">
                 <img src="https://raw.githubusercontent.com/semestarayacorporation-oss/spt-pajak/main/razamanmuda.png" alt="Logo Smart SPT" class="w-12 h-12 object-contain drop-shadow" /> Smart SPT
             </h2>
-            <p class="text-[10px] text-slate-400 mt-1 uppercase tracking-wider font-bold">INTERNAL LAPORAN KEUANGAN OTOMATIS</p>
+            <p class="text-[10px] text-slate-400 mt-1 uppercase tracking-wider font-bold">SPT Tahunan INTERNAL OTOMATIS</p>
         </div>
 
         <div class="flex-1 overflow-y-auto p-4 space-y-6">
@@ -232,9 +232,8 @@
     <main class="flex-1 flex flex-col h-full relative bg-gray-100">
         <header class="bg-white p-4 border-b flex justify-between items-center px-8 shadow-sm z-10 sticky top-0">
             <h1 class="font-bold text-xl text-gray-800 flex items-center gap-2">
-                SPT Tahunan
-                <span class="bg-green-100 text-green-800 text-[10px] px-2 py-0.5 rounded-full border border-green-200 font-bold uppercase tracking-wider">Menghitung Instan</span>
-            </h1>
+              <img src="https://raw.githubusercontent.com/semestarayacorporation-oss/spt-pajak/main/tfq.png" alt="Logo Smart SPT" class="w-8 h-8 object-contain drop-shadow" />  Menghitung Instan
+                          </h1>
             <button onclick="sendWhatsapp()" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-2 shadow-lg transition-all transform hover:scale-105 floating-cta">
                 <i data-lucide="message-circle"></i> Simpan & Download
             </button>
@@ -302,8 +301,8 @@
                         <div class="flex items-center gap-4">
                             <div class="bg-white/20 p-3 rounded-full shadow-inner"><i data-lucide="help-circle" class="w-6 h-6 text-yellow-300"></i></div>
                             <div>
-                                <h4 class="font-bold text-base text-yellow-300">Tetapkan jadi Hak Tarif UMKM 0,5% Lebih Ringan.</h4>
-                                <p class="text-xs text-blue-100 mt-1">Pastikan status tarif Anda harus valid.</p>
+                                <h4 class="font-bold text-base text-yellow-300">Tetapkan Hak Tarif UMKM 0,5% Lebih Ringan.</h4>
+                                <p class="text-xs text-blue-100 mt-1">Coba Validasi Anda berhak pakai Tarif ringan.</p>
                             </div>
                         </div>
                         <a href="https://konsulat.vercel.app/" target="_blank" class="bg-white text-blue-700 px-5 py-2.5 rounded-lg text-xs font-bold hover:bg-blue-50 shadow-lg transition-all transform hover:-translate-y-0.5">Proses Ketetapan Fasilitas 0,5%</a>
