--- a/index.html
+++ b/index.html
@@ -552,7 +552,18 @@
                             <span class="text-slate-200">Nilai Akhir</span> <span id="out-balance">Rp 0</span>
                         </div>
                     </div>
-
+<!-- MARKETING BANNER 1 -->
+                    <div class="bg-promo text-white p-5 rounded-xl shadow-lg flex justify-between items-center transform transition hover:scale-[1.005] cursor-pointer border border-blue-400 mb-6">
+                        <div class="flex items-center gap-4">
+                            <div class="bg-white/20 p-3 rounded-full shadow-inner"><i data-lucide="help-circle" class="w-6 h-6 text-yellow-300"></i></div>
+                            <div>
+                                <h4 class="font-bold text-base text-yellow-300">Tetapkan Hak Tarif UMKM 0,5% Lebih Ringan.</h4>
+                                <p class="text-xs text-blue-100 mt-1">Coba Validasi Anda berhak pakai Tarif ringan.</p>
+                            </div>
+                        </div>
+                        <a href="https://konsulat.vercel.app/" target="_blank" class="bg-white text-blue-700 px-5 py-2.5 rounded-lg text-xs font-bold hover:bg-blue-50 shadow-lg transition-all transform hover:-translate-y-0.5">Proses Ketetapan Fasilitas 0,5%</a>
+                    </div>
+                    
                     <!-- MARKETING BANNER 2 -->
                     <div class="bg-gradient-to-r from-slate-900 to-slate-800 text-white p-5 rounded-xl shadow-lg flex justify-between items-center border border-slate-700 mt-8 relative z-10">
                         <div class="flex items-center gap-4">
