--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                 <p class="text-xs text-blue-100 mt-1">Coba Validasi Anda berhak pakai Tarif ringan.</p>
                             </div>
                         </div>
-                        <a href="https://tarifpajak.vercel.app/" class="bg-white text-blue-700 px-5 py-2.5 rounded-lg text-xs font-bold hover:bg-blue-50 shadow-lg transition-all transform hover:-translate-y-0.5">Proses Ketetapan Fasilitas 0,5%</a>
+                        <a href="https://tarifpajak.vercel.app/" target="blank" class="bg-white text-blue-700 px-5 py-2.5 rounded-lg text-xs font-bold hover:bg-blue-50 shadow-lg transition-all transform hover:-translate-y-0.5">Proses Ketetapan Fasilitas 0,5%</a>
                     </div>
 
                     <div class="text-center pt-4 border-t border-gray-100">
